--- a/Forms/App.config
+++ b/Forms/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="BarcodeContext" connectionString="data source=.\SQLEXPRESS;initial catalog=barcode;integrated security=true" providerName="System.Data.Sqlclient" />
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
