--- a/Forms/Forms.csproj
+++ b/Forms/Forms.csproj
@@ -110,11 +110,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateProductForm.cs">
+    <Compile Include="SaleForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UpdateProductForm.Designer.cs">
-      <DependentUpon>UpdateProductForm.cs</DependentUpon>
+    <Compile Include="SaleForm.Designer.cs">
+      <DependentUpon>SaleForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AddProductForm.resx">
       <DependentUpon>AddProductForm.cs</DependentUpon>
@@ -127,8 +127,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="UpdateProductForm.resx">
-      <DependentUpon>UpdateProductForm.cs</DependentUpon>
+    <EmbeddedResource Include="SaleForm.resx">
+      <DependentUpon>SaleForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
