--- a/Forms/packages.config
+++ b/Forms/packages.config
@@ -4,5 +4,6 @@
   <package id="AForge.Video" version="2.2.5" targetFramework="net461" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
+  <package id="Ninject" version="3.3.6" targetFramework="net461" />
   <package id="ZXing.Net" version="0.16.9" targetFramework="net461" />
 </packages>
