FluentValidaton ile Validation işlemleri

--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -53,14 +53,14 @@
   <ItemGroup>
     <Compile Include="Abstract\IEntityRepository.cs" />
     <Compile Include="Abstract\IIncomeDal.cs" />
-    <Compile Include="Abstract\IOutcomeDal.cs" />
+    <Compile Include="Abstract\IOutgoingDal.cs" />
     <Compile Include="Abstract\IProductDal.cs" />
     <Compile Include="Abstract\IRoleDal.cs" />
     <Compile Include="Abstract\IUserDal.cs" />
     <Compile Include="Concrete\EntityFramework\BarcodeContext.cs" />
     <Compile Include="Concrete\EntityFramework\EfEntityRepositoryBase.cs" />
     <Compile Include="Concrete\EntityFramework\EfIncomeDal.cs" />
-    <Compile Include="Concrete\EntityFramework\EfOutcomeDal.cs" />
+    <Compile Include="Concrete\EntityFramework\EfOutgoingDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfProductDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfRoleDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfUserDal.cs" />
