--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -40,12 +40,21 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation, Version=11.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentValidation.11.5.1\lib\netstandard2.0\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject, Version=3.3.6.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.3.6\lib\net45\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,18 +64,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IIncomeService.cs" />
-    <Compile Include="Abstract\IOutcomeService.cs" />
+    <Compile Include="Abstract\IOutgoingService.cs" />
     <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="Abstract\IProductService.cs" />
     <Compile Include="Abstract\IRoleService.cs" />
     <Compile Include="Concrete\IncomeManager.cs" />
-    <Compile Include="Concrete\OutcomeManager.cs" />
+    <Compile Include="Concrete\OutgoingManager.cs" />
     <Compile Include="Concrete\ProductManager.cs" />
     <Compile Include="Concrete\RoleManager.cs" />
     <Compile Include="Concrete\UserManager.cs" />
     <Compile Include="DependencyResolvers\Ninject\BusinessModule.cs" />
     <Compile Include="DependencyResolvers\Ninject\InstanceFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\ValidationTool.cs" />
+    <Compile Include="ValidationRules\FluentValidation\IncomeValidator.cs" />
+    <Compile Include="ValidationRules\FluentValidation\OutgoingValidator.cs" />
+    <Compile Include="ValidationRules\FluentValidation\ProductValidator.cs" />
+    <Compile Include="ValidationRules\FluentValidation\RoleValidator.cs" />
+    <Compile Include="ValidationRules\FluentValidation\UserValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
