--- a/Business/packages.config
+++ b/Business/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
+  <package id="FluentValidation" version="11.5.1" targetFramework="net461" />
   <package id="Ninject" version="3.3.6" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
